--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Document
+        Harmony Heights Hotels || Home
     </title>
 </head>
 <body>
-    
+    <main>
+        <div class="container-all">
+            <div class="navbar">
+                <nav>
+                    <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
+                    <li><a href="contact.html">i</a></li>
+                </nav>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
