--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="container-all">
             <div class="navbar">
                 <nav>
-                    <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
-                    <li><a href="contact.html">i</a></li>
+                    <li title="Our homepage"><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
+                    <li title="Contact us for more information"><a href="contact.html"><i class="fa fa-envelope">Contact us</i></a></li>
                 </nav>
             </div>
         </div>
