--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>
         Harmony Heights Hotels || Home
     </title>
+    <script src="https://kit.fontawesome.com/6b10f9f02f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
         <div class="container-all">
             <div class="navbar">
                 <nav>
-                    <li title="Our homepage"><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
-                    <li title="Contact us for more information"><a href="contact.html"><i class="fa fa-envelope">Contact us</i></a></li>
+                    <a title="Our homepage" href="index.html"><i class="fa fa-home"></i>Home</a>
+                    <a title="Contact us for more information" href="contact.html"><i class="fa fa-envelope"></i>Contact us</a>
                 </nav>
             </div>
         </div>
