--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         Harmony Heights Hotels || Home
     </title>
     <script src="https://kit.fontawesome.com/6b10f9f02f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <main>
         <div class="container-all">
             <div class="navbar">
                 <nav>
-                    <a title="Our homepage" href="index.html"><i class="fa fa-home"></i>Home</a>
+                    <a class="active" title="Our homepage" href="index.html"><i class="fa fa-home"></i>Home</a>
                     <a title="Contact us for more information" href="contact.html"><i class="fa fa-envelope"></i>Contact us</a>
                 </nav>
             </div>
