--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     </title>
     <script src="https://kit.fontawesome.com/6b10f9f02f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
     <main>
         <div class="container-all">
-            <div class="navbar">
-                <nav>
-                    <a class="active" title="Our homepage" href="index.html"><i class="fa fa-home"></i> Home</a>
-                    <a title="Contact us for more information" href="contact.html"><i class="fa fa-envelope"></i> Contact us</a>
-                </nav>
+            <div class="topnav" id="myTopnav">
+                <a href="#home" class="active">Home</a>
+                <a href="#news">News</a>
+                <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
+                        class="fa fa-headset"></i> Contact </a>
+                <a href="#about">About</a>
+                <a href="#phone-number"><i class="fa fa-phone"></i> Phone number</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </div>
+        </div>
         </div>
     </main>
 </body>
