--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <main>
         <div class="container-all">
             <div class="topnav" id="myTopnav">
-                <a href="#home" class="active">Home</a>
+                <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
                 <a href="#news">News</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
                 <a href="#about">About</a>
-                <a href="#phone-number"><i class="fa fa-phone"></i> Phone number</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
