--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-all">
             <div class="topnav" id="myTopnav">
                 <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
-                <a href="#news">News</a>
+                <a href="rooms.html">Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
                 <a href="#about">About</a>
