--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
         <div class="container-all">
             <div class="topnav" id="myTopnav">
-                <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
-                <a href="rooms.html">Rooms</a>
+                <a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
+                <a href="rooms.html"><i class="fa fa-hotel"></i> Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
                 <a href="#about">About</a>
