--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="rooms.html"><i class="fa fa-hotel"></i> Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
-                <a href="#about">About</a>
+                <a href="#about"><i class="fa fa-people-group"></i> About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
