--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <script src="https://kit.fontawesome.com/6b10f9f02f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+
 </head>
 <body>
     <main>
         <div class="container-all">
             <div class="topnav" id="myTopnav">
-                <a href="#home" class="active"><i class="fa fa-home"></i> Home</a>
+                <a href="#home" class="active"><i class="fa fa-home fa-beat-fade"></i> Home</a>
                 <a href="rooms.html"><i class="fa fa-hotel"></i> Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
