--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="container-all">
             <div class="topnav" id="myTopnav">
                 <a href="#home" class="active"><i class="fa fa-home fa-beat-fade"></i> Home</a>
-                <a href="rooms.html"><i class="fa fa-hotel"></i> Rooms</a>
+                <a href="rooms.html"><i class="fa fa-hotel fa-beat-fade"></i> Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
                         class="fa fa-headset"></i> Contact </a>
-                <a href="#about"><i class="fa fa-people-group"></i> About</a>
+                <a href="#about"><i class="fa fa-people-group fa-beat-fade"></i> About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
