--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         class="fa fa-headset"></i> Contact </a>
                 <a href="#about"><i class="fa fa-people-group fa-beat-fade"></i> About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                    <i class="fa fa-bars fa-beat-fade"></i>
                 </a>
             </div>
         </div>
