--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#home" class="active"><i class="fa fa-home fa-beat-fade"></i> Home</a>
                 <a href="rooms.html"><i class="fa fa-hotel fa-beat-fade"></i> Rooms</a>
                 <a title="Have a complaint?? Contact our customer service." href="contact.html"> <i
-                        class="fa fa-headset"></i> Contact </a>
+                        class="fa fa-headset fa-beat-fade"></i> Contact </a>
                 <a href="#about"><i class="fa fa-people-group fa-beat-fade"></i> About</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-beat-fade"></i>
