--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                 </a>
             </div>
             <div class="headerplace">
-                
+                <div class="w3-margin w3-padding-64">
+                    <h1 class="w3-xxlarge">
+                        Your Holiday Harmony
+                    </h1>
+                </div>
             </div>
         </div>
     </main>
