--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <h1 class="w3-xxlarge">
                         Your Holiday Harmony
                     </h1>
+                    <h6 class="w3-medium">
+                        All at your fingertips
+                    </h6>
                 </div>
             </div>
         </div>
