--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
             </div>
             <div class="headerplace">
-                <div class="w3-margin w3-padding-64">
+                <div class="w3-margin w3-padding-top w3-padding-bottom w3-padding-64">
                     <br>
                     <h1 class="w3-xxlarge">
                         Your Holiday Harmony
