--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="headerplace">
                 <div class="w3-margin w3-padding-top w3-padding-bottom w3-padding-64">
                     <br>
-                    <h1 class="w3-xxlarge">
+                    <h1 class="w3-xlarge">
                         Your Holiday Harmony
                     </h1>
-                    <h6 class="w3-medium">
+                    <h6 class="w3-small">
                         All at your fingertips
                     </h6>
                     <br>
