--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-phone"></i> +098-765-4321</a>
-            <a href="#"> <i class="fas fa-envelope"></i> naruto@harmonyheights.com</a>
+            <a href="#"> <i class="fas fa-envelope"></i> senatorpresident@harmonyheights.com</a>
             <a href="#"> <i class="fas fa-map"></i> Lagos, nigeria</a>
          </div>
 
