Update about.html usujd

--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
       <a href="#" class="logo"> <i class="fas fa-hotel"></i> Harmony Heights </a>
 
       <nav class="navbar">
-         <a href="#home">home</a>
-         <a href="#about">about</a>
-         <a href="#room">room</a>
-         <a href="#gallery">gallery</a>
-         <a href="#review">review</a>
-         <a href="#faq">fAQ</a>
-         <a href="#reservation" class="btn"> book now</a>
+         <a href="index.html">home</a>
+         <a href="#">about</a>
+         <a href="index.html#room">room</a>
+         <a href="index.html#gallery">gallery</a>
+         <a href="index.html#review">review</a>
+         <a href="index.html#faq">fAQ</a>
+         <a href="index.html#reservation" class="btn"> book now</a>
       </nav>
 
       <div id="menu-btn" class="fas fa-bars"></div>
