--- a/about.html
+++ b/about.html
@@ -1,85 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Harmony Heights || About us -- Our Story </title>
-   <script src="https://kit.fontawesome.com/6b10f9f02f.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-   <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Harmony Heights Hotel</title>
+  <meta name="description" content="Learn about Harmony Heights Hotel – our rich history, commitment to excellence, and dedication to providing exceptional luxury experiences.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
-
-   <!-- header -->
-
-   <header class="header">
-
-      <a href="#" class="logo"> <i class="fas fa-hotel"></i> Harmony Heights </a>
-
-      <nav class="navbar">
-         <a href="index.html">home</a>
-         <a href="#">about</a>
-         <a href="index.html#room">room</a>
-         <a href="index.html#gallery">gallery</a>
-         <a href="index.html#review">review</a>
-         <a href="index.html#faq">fAQ</a>
-         <a href="index.html#reservation" class="btn"> book now</a>
-      </nav>
-
-      <div id="menu-btn" class="fas fa-bars"></div>
-
-   </header>
-
-   <!-- end -->
-
-
-   <!-- footer -->
-
-   <section class="footer">
-
-      <div class="box-container">
-
-         <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +098-765-4321</a>
-            <a href="#"> <i class="fas fa-envelope"></i> naruto@harmonyheights.com</a>
-            <a href="#"> <i class="fas fa-map"></i> Lagos, nigeria</a>
-         </div>
-
-         <div class="box">
-            <h3>quick links</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> home</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> about</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> rooms</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> gallery</a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> reservation</a>
-         </div>
-
-         <div class="box">
-            <h3>extra links</h3>
-            <a target="_blank" href="refund.html"> <i class="fas fa-arrow-right"></i> refund policy</a>
-         </div>
-
+  <header>
+    <nav>
+      <a href="index.html" class="logo">Harmony Heights</a>
+      <ul>
+        <li><a href="rooms.html">Rooms & Suites</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="policies.html">Policies</a></li>
+      </ul>
+      <a href="index.html#book" class="cta">Reserve Now</a>
+    </nav>
+  </header>
+  
+  <main>
+    <section class="about-hero">
+      <div class="section-header">
+        <h1>About Harmony Heights</h1>
+        <p>A legacy of luxury and excellence in hospitality</p>
       </div>
+      <img src="assets/images/about.jpg" alt="Harmony Heights Hotel Exterior" style="width: 100%; max-width: 800px; border-radius: 12px; margin: 2rem auto; display: block;">
+    </section>
 
-      <div class="share">
-         <a href="#" class="fab fa-facebook-f"></a>
-         <a href="#" class="fab fa-instagram"></a>
-         <a href="#" class="fab fa-twitter"></a>
-         <a href="#" class="fab fa-pinterest"></a>
+    <section class="story">
+      <div class="section-header">
+        <h2>Our Story</h2>
+        <p>Founded in 2024, Harmony Heights Hotel represents the pinnacle of luxury hospitality, combining timeless elegance with modern sophistication.</p>
       </div>
+      <div style="max-width: 800px; margin: 0 auto; line-height: 1.8;">
+        <p>Harmony Heights Hotel was born from a vision to create an extraordinary destination where guests could experience the perfect blend of luxury, comfort, and personalized service. Our founders understood that true luxury lies not just in beautiful surroundings, but in the thoughtful details that make every moment memorable.</p>
+        <p>From our meticulously designed rooms to our world-class amenities, every aspect of Harmony Heights has been crafted with our guests' comfort and satisfaction in mind. We believe that luxury is not just about opulence, but about creating meaningful experiences that stay with our guests long after their stay.</p>
+      </div>
+    </section>
 
+    <section class="mission" style="background: var(--bg-light);">
+      <div class="section-header">
+        <h2>Our Mission</h2>
+        <p>To provide exceptional luxury experiences that exceed expectations and create lasting memories.</p>
+      </div>
+      <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+        <p style="font-size: 1.2rem; line-height: 1.8; color: var(--text-light);">
+          At Harmony Heights, we are committed to delivering unparalleled service, maintaining the highest standards of excellence, and creating an environment where every guest feels valued and pampered. Our mission is to be the preferred choice for discerning travelers who seek the perfect balance of luxury, comfort, and authentic hospitality.
+        </p>
+      </div>
+    </section>
 
-   </section>
+    <section class="unique">
+      <div class="section-header">
+        <h2>What Sets Us Apart</h2>
+        <p>Discover the unique qualities that make Harmony Heights the premier choice for luxury accommodations.</p>
+      </div>
+      <div style="max-width: 1000px; margin: 0 auto;">
+        <ul style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; list-style: none;">
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Exceptional Service</h3>
+            <p>Our dedicated team is committed to providing personalized attention and anticipating your every need.</p>
+          </li>
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Prime Location</h3>
+            <p>Situated in the heart of the city, we offer convenient access to all major attractions and business districts.</p>
+          </li>
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Luxury Amenities</h3>
+            <p>From our fine dining restaurant to our state-of-the-art fitness center, every amenity is designed for your comfort.</p>
+          </li>
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Elegant Design</h3>
+            <p>Our interiors blend contemporary sophistication with timeless elegance, creating a truly luxurious atmosphere.</p>
+          </li>
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Sustainability</h3>
+            <p>We are committed to environmental responsibility while maintaining the highest standards of luxury.</p>
+          </li>
+          <li style="background: white; padding: 2rem; border-radius: 12px; box-shadow: var(--shadow); transition: var(--transition);">
+            <h3 style="color: var(--secondary); margin-bottom: 1rem;">Local Partnerships</h3>
+            <p>We collaborate with local artisans and businesses to provide authentic experiences and support our community.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
 
-   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-   <script src="assets/js/swiper.js"></script>
-   <script src="assets/js/script.js"></script>
+  <footer>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="rooms.html">Rooms & Suites</a> |
+      <a href="contact.html">Contact</a> |
+      <a href="policies.html">Policies</a>
+    </nav>
+    <p>&copy; 2024 Harmony Heights Hotel. All rights reserved. | Luxury Redefined</p>
+  </footer>
 
+  <script>
+    // Header scroll effect
+    window.addEventListener('scroll', () => {
+      const header = document.querySelector('header');
+      if (window.scrollY > 100) {
+        header.classList.add('scrolled');
+      } else {
+        header.classList.remove('scrolled');
+      }
+    });
+
+    // Loading animations
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('loaded');
+        }
+      });
+    }, observerOptions);
+
+    // Observe elements for animation
+    document.querySelectorAll('.unique li').forEach(el => {
+      el.classList.add('loading');
+      observer.observe(el);
+    });
+  </script>
 </body>
-
 </html>
