--- a/policies.html
+++ b/policies.html
@@ -44,13 +44,13 @@
   </main>
   <footer>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="rooms.html">Rooms</a> |
-      <a href="contact.html">Contact</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="rooms.html">Rooms & Suites</a>
+      <a href="contact.html">Contact</a>
       <a href="policies.html">Policies</a>
     </nav>
-    <p>&copy; 2024 Harmony Heights Hotel. All rights reserved.</p>
+    <p>&copy; <script>document.write(new Date().getFullYear());</script> Harmony Heights Hotel. All rights reserved. Luxury Redefined</p>
   </footer>
 </body>
 </html> 
