--- a/about.html
+++ b/about.html
@@ -91,13 +91,13 @@
 
   <footer>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="rooms.html">Rooms & Suites</a> |
-      <a href="contact.html">Contact</a> |
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="rooms.html">Rooms & Suites</a>
+      <a href="contact.html">Contact</a>
       <a href="policies.html">Policies</a>
     </nav>
-    <p>&copy; 2024 Harmony Heights Hotel. All rights reserved. | Luxury Redefined</p>
+    <p>&copy; <script>document.write(new Date().getFullYear());</script> Harmony Heights Hotel. All rights reserved. Luxury Redefined</p>
   </footer>
 
   <script>
